--- a/index.html
+++ b/index.html
@@ -112,20 +112,20 @@ cube.rotation.x=-Math.PI/6;
 scene.add( cube );
         
 //lefthand
-//var geometry = new THREE.SphereBufferGeometry(0.7, 8, 8, 0, 2*Math.PI, 0, 0.5 * Math.PI);
-//var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/hand.jpg')} );
-//material.side = THREE.DoubleSide;
-//mesh = new THREE.Mesh(geometry, material); 
-//mesh.overdraw=true;
-//mesh.castShadow = true;
-//scene.add(mesh);
-//mesh.position.set(-1.5,3,0);
-//mesh.rotation.z=Math.PI/2;
-////righthand
-//mesh = new THREE.Mesh(geometry, material); 
-//scene.add(mesh);
-//mesh.position.set(1.5,3,0);
-//mesh.rotation.z=-Math.PI/2;
+var geometry = new THREE.SphereBufferGeometry(0.7, 8, 8, 0, 2*Math.PI, 0, 0.5 * Math.PI);
+var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/hand.jpg')} );
+material.side = THREE.DoubleSide;
+mesh = new THREE.Mesh(geometry, material); 
+mesh.overdraw=true;
+mesh.castShadow = true;
+scene.add(mesh);
+mesh.position.set(-1.5,3,0);
+mesh.rotation.z=Math.PI/2;
+//righthand
+mesh = new THREE.Mesh(geometry, material); 
+scene.add(mesh);
+mesh.position.set(1.5,3,0);
+mesh.rotation.z=-Math.PI/2;
   
 //var geometry = new THREE.SphereGeometry( 0.15, 16, 16 ); //rightAntena
 //var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/ball.jpg')} );
