--- a/index.html
+++ b/index.html
@@ -127,29 +127,29 @@ scene.add(mesh);
 mesh.position.set(1.5,3,0);
 mesh.rotation.z=-Math.PI/2;
   
-//var geometry = new THREE.SphereGeometry( 0.15, 16, 16 ); //rightAntena
-//var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/ball.jpg')} );
-//var sphere = new THREE.Mesh( geometry, material );
-//scene.add( sphere );
-//sphere.position.set(3/4,5.5,0);
-//        
-//var sphere = new THREE.Mesh( geometry, material ); //leftAntena
-//scene.add( sphere );
-//sphere.position.set(-3/4,5.5,0);
+var geometry = new THREE.SphereGeometry( 0.15, 16, 16 ); //rightAntena
+var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/ball.jpg')} );
+var sphere = new THREE.Mesh( geometry, material );
+scene.add( sphere );
+sphere.position.set(3/4,5.5,0);
+        
+var sphere = new THREE.Mesh( geometry, material ); //leftAntena
+scene.add( sphere );
+sphere.position.set(-3/4,5.5,0);
 
-//var geometry = new THREE.CylinderGeometry( 0.05, 0.05, 1, 100 );
-//var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/TV.jpg')} );
-//var cylinder = new THREE.Mesh( geometry, material );
-//scene.add( cylinder );
-//cylinder.position.set(-0.37,5.1,0);
-//cylinder.rotation.z=Math.PI/4;
-//        
-//var geometry = new THREE.CylinderGeometry( 0.05, 0.05, 1, 100 );
-//var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/TV.jpg')} );
-//var cylinder = new THREE.Mesh( geometry, material );
-//scene.add( cylinder );
-//cylinder.position.set(0.37,5.1,0);
-//cylinder.rotation.z=-Math.PI/4;
+var geometry = new THREE.CylinderGeometry( 0.05, 0.05, 1, 100 );
+var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/TV.jpg')} );
+var cylinder = new THREE.Mesh( geometry, material );
+scene.add( cylinder );
+cylinder.position.set(-0.37,5.1,0);
+cylinder.rotation.z=Math.PI/4;
+        
+var geometry = new THREE.CylinderGeometry( 0.05, 0.05, 1, 100 );
+var material = new THREE.MeshBasicMaterial( {map:new THREE.TextureLoader().load('img/TV.jpg')} );
+var cylinder = new THREE.Mesh( geometry, material );
+scene.add( cylinder );
+cylinder.position.set(0.37,5.1,0);
+cylinder.rotation.z=-Math.PI/4;
 
 //var geometry = new THREE.BoxGeometry(3/2,3/2,0.1);
 //var cubeMaterials =
