--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     camera.position.z = 6;
     camera.position.y = 2;
         
-light = new THREE.AmbientLight(0xffffff);
+light = new THREE.PointLight(0xffffff, 1, 4000);
     light.position.set(10, 10, 0);
     scene.add(light);
 //body
