wings and cross tail

--- a/test.html
+++ b/test.html
@@ -218,44 +218,44 @@
             engine.receiveShadow = true;
             this.mesh.add(engine);
 
-            // Создаем хвост1
-//            var geomTailPlane = new THREE.BoxGeometry(25, 40, 5, 1, 1, 1);
-//            var matTailPlane = new THREE.MeshPhongMaterial({
-//                color: Colors.red,
-//                shading: THREE.FlatShading
-//            });
-//            var tailPlane = new THREE.Mesh(geomTailPlane, matTailPlane);
-//            tailPlane.position.set(-100, 25, 0);
-//            tailPlane.castShadow = true;
-//            tailPlane.receiveShadow = true;
-//            this.mesh.add(tailPlane);
-//            //хвост2
-//            var geomTailPlane = new THREE.BoxGeometry(25, 75, 10, 1, 1, 1);
-//            var matTailPlane = new THREE.MeshPhongMaterial({
-//                color: Colors.red,
-//                shading: THREE.FlatShading
-//            });
-//            var tailPlane = new THREE.Mesh(geomTailPlane, matTailPlane);
-//            tailPlane.position.set(-100, 25, 0);
-//            tailPlane.castShadow = true;
-//            tailPlane.receiveShadow = true;
-//            tailPlane.rotation.x=Math.PI/2;
-//            tailPlane.position.y-=25;
-//            this.mesh.add(tailPlane);
+//             Создаем хвост1
+            var geomTailPlane = new THREE.BoxGeometry(25, 40, 5, 1, 1, 1);
+            var matTailPlane = new THREE.MeshPhongMaterial({
+                color: Colors.red,
+                shading: THREE.FlatShading
+            });
+            var tailPlane = new THREE.Mesh(geomTailPlane, matTailPlane);
+            tailPlane.position.set(-100, 25, 0);
+            tailPlane.castShadow = true;
+            tailPlane.receiveShadow = true;
+            this.mesh.add(tailPlane);
+            //хвост2
+            var geomTailPlane = new THREE.BoxGeometry(25, 75, 10, 1, 1, 1);
+            var matTailPlane = new THREE.MeshPhongMaterial({
+                color: Colors.red,
+                shading: THREE.FlatShading
+            });
+            var tailPlane = new THREE.Mesh(geomTailPlane, matTailPlane);
+            tailPlane.position.set(-100, 25, 0);
+            tailPlane.castShadow = true;
+            tailPlane.receiveShadow = true;
+            tailPlane.rotation.x=Math.PI/2;
+            tailPlane.position.y-=25;
+            this.mesh.add(tailPlane);
             
-            // Создаем крыло 1
-//            var geomSideWing = new THREE.BoxGeometry(50, 8, 300, 1, 1, 1);
-//            var matSideWing = new THREE.MeshPhongMaterial({
-//                color: Colors.brown,
-//                shading: THREE.FlatShading
-//            });
-//            var sideWing = new THREE.Mesh(geomSideWing, matSideWing);
-//            sideWing.castShadow = true;
-//            sideWing.receiveShadow = true;
-//            sideWing.rotation.z = -Math.PI/25;
-//            sideWing.position.y-=15;
-//            sideWing.position.x+=15;
-//            this.mesh.add(sideWing);
+ //            Создаем крыло 1
+            var geomSideWing = new THREE.BoxGeometry(50, 8, 300, 1, 1, 1);
+            var matSideWing = new THREE.MeshPhongMaterial({
+                color: Colors.brown,
+                shading: THREE.FlatShading
+            });
+            var sideWing = new THREE.Mesh(geomSideWing, matSideWing);
+            sideWing.castShadow = true;
+            sideWing.receiveShadow = true;
+            sideWing.rotation.z = -Math.PI/25;
+            sideWing.position.y-=15;
+            sideWing.position.x+=15;
+            this.mesh.add(sideWing);
             
             // Создаем крыло 2
             var geomSideWing = new THREE.BoxGeometry(50, 8, 300, 1, 1, 1);
